# gitx

./: File1.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml
docs/: index.md  installation.md
docs/tutorial/basics/: committing.md  history.md  repositories.md  version-control.md
scripts/: verify.sh
src/gitx/: __init__.py  app.py  main.py
src/gitx/css/: app.tcss
src/gitx/git/: handler.py
src/gitx/screens/: welcome.py
src/gitx/widgets/: branches_panel.py  command_panel.py  commit_log.py  file_tree.py  main_panel.py  status_panel.py
