[project]
name = "gitx"
version = "0.1.0"
description = "TUI based git helper"
authors = [
    {name = "Ayush",email = "mail@ayuch.dev"}
    {name = "Ashmit9955",email = "ashmit9955@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "textual (>=2.1.2,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
